[gd_scene load_steps=3 format=3 uid="uid://c8m4kan6vx2o1"]

[ext_resource type="Script" path="res://scripts/ui/dialogue_manager.gd" id="1_h5k2m"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 14

[node name="DialogueManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_h5k2m")

[node name="DialogueBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = -20.0

[node name="CharacterName" type="Label" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -100.0
text = "Character"
label_settings = SubResource("LabelSettings_1")

[node name="DialogueText" type="Label" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -40.0
text = "Dialogue text goes here..."
autowrap_mode = 2
vertical_alignment = 1

[node name="ContinuePrompt" type="Label" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -25.0
offset_right = -20.0
offset_bottom = -5.0
text = "Press SPACE to continue..."
horizontal_alignment = 2